first class implementation

--- a/config/diagnostics/teleconnections/interface/teleconnections-destine.yaml
+++ b/config/diagnostics/teleconnections/interface/teleconnections-destine.yaml
@@ -36,6 +36,7 @@ MJO: # http://www.bom.gov.au/climate/mjo
 # Hovmoller plot monthly u-wind in the box 2N-2S, 1000-10000 hPa
 # averaged over the entire longitude
 QBO:
+  telec_type: 'hovmoller'
   field: u
   latN: 2
   latS: -2
