update grids and plan for grids creation

--- a/config/grids/FESOM.yaml
+++ b/config/grids/FESOM.yaml
@@ -80,16 +80,18 @@ grids:
     space_coord: ["ncells"]
     vert_coord: ["level"]
   
-  # For CORE2 a v1 does not exist, but we keep v2 because they are generated with
-  # the v2 of the others native grids.
-  fesom-CORE2-hpz5-nested-v2:
+  # FESOM v3: These are grids for DestinE O-25.1 cycle.
+  # Interpolation to HealPix is now conservative and this
+  # produced a change in the land sea mask, so all the grids
+  # are different from the previous ones
+  fesom-CORE2-hpz5-nested-v3:
     cdo_options: "--force"
     space_coord: ["ncells"]
-    path: '{{ grids }}/HealPix/fesom-CORE2_hpz5_nested_oce_v2.nc'
-  fesom-CORE2-hpz5-nested-3d-v2:
+    path: '{{ grids }}/HealPix/fesom-CORE2_hpz5_nested_oce_v3.nc'
+  fesom-CORE2-hpz5-nested-3d-v3:
     cdo_options: "--force"
     path:
-      level: '{{ grids }}/HealPix/fesom-CORE2_hpz5_nested_oce_level_v2.nc'
+      level: '{{ grids }}/HealPix/fesom-CORE2_hpz5_nested_oce_level_v3.nc'
     space_coord: ["ncells"]
     vert_coord: ["level"]
   
