--- a/config/catgen/matching_grids.yaml
+++ b/config/catgen/matching_grids.yaml
@@ -25,19 +25,20 @@ ocean_grid:
     intermediate: null
 
 # Grid string mappings
+# v3 refers to the grids generated for the O-25.1 cycle
 grid_mappings:
   sfc:
     default: "{aqua_grid}-nested"
   pl:
     default: "{aqua_grid}-nested"
   o2d:
-    ifs-nemo: "nemo-{ocean_grid}-{aqua_grid}-nested"
-    ifs-fesom: "fesom-{ocean_grid}-{aqua_grid}-nested-v2"
-    icon: "icon-{ocean_grid}-{aqua_grid}-nested-v2"
+    ifs-nemo: "nemo-{ocean_grid}-{aqua_grid}-nested-v3"
+    ifs-fesom: "fesom-{ocean_grid}-{aqua_grid}-nested-v3"
+    icon: "icon-{ocean_grid}-{aqua_grid}-nested-v3"
   o3d:
-    ifs-nemo: "nemo-{ocean_grid}-{aqua_grid}-nested-3d" 
-    ifs-fesom: "fesom-{ocean_grid}-{aqua_grid}-nested-3d-v2"
-    icon: "icon-{ocean_grid}-{aqua_grid}-nested-3d-v2"
+    ifs-nemo: "nemo-{ocean_grid}-{aqua_grid}-nested-3d-v3"
+    ifs-fesom: "fesom-{ocean_grid}-{aqua_grid}-nested-3d-v3"
+    icon: "icon-{ocean_grid}-{aqua_grid}-nested-3d-v3"
   default: "{aqua_grid}"
   
 #NSIDE_TO_ORDER = {1:0, 2:1, 4:2, 8:3, 16:4, 32:5, 64:6, 128:7, 256:8, 512:9, 1024:10, 2048:11, 4096:12, 8192:13}
