--- a/config/diagnostics/ecmean/interface/interface_AQUA_climatedt.yaml
+++ b/config/diagnostics/ecmean/interface/interface_AQUA_climatedt.yaml
@@ -94,11 +94,11 @@ variables:
     derived: msl
   tauu: 
     varname: 'Zonal Wind Stress'
-    derived: metss
+    derived: iews
     filetype: atmbase
   tauv:
     varname: 'Meridional Wind Stress'
-    derived: mntss
+    derived: inss
     filetype: atmbase
   clt: 
     derived: tcc
@@ -196,7 +196,7 @@ variables:
   net_sfc:
     varname: 'Net Surface'
     filetype: atmbase
-    derived: 'ishf+slhtf+snlwrf+snswrf-msr*334000'
+    derived: 'ishf+slhtf+snlwrf+snswrf-tsrwe*334000'
   # toamsfc:
   #   varname: 'TOA-Sfc net radiation'
   #   units: W/m2
