--- a/codecov.yml
+++ b/codecov.yml
@@ -7,8 +7,7 @@ coverage:
         threshold: 0.1%  # Allow a 0.1% drop without failing
     
 fixes:
-  - "/__w/AQUA/AQUA/AQUA/src/aqua/::src/aqua/"
-  - "/__w/AQUA/AQUA/AQUA/src/aqua_diagnostics/::src/aqua_diagnostics/"
+  - "/__w/AQUA/AQUA/AQUA/src/::"
 
 ignore:
   - "tests/*"          # Ignore test files
