--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -62,7 +62,7 @@ jobs:
       # If true, the entire matrix will stop running when one of the jobs fails.
       fail-fast: false
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.12", "3.13"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
