refractor of ocean3d

--- a/cli/aqua-analysis/config.aqua-analysis.yaml
+++ b/cli/aqua-analysis/config.aqua-analysis.yaml
@@ -120,13 +120,13 @@ diagnostics:
     nocluster: true  # ECmean does not use the global dask cluster
     config: "${AQUA_CONFIG}/diagnostics/ecmean/config_ecmean_cli.yaml"
   ocean3d_drift:
-    script_path: "ocean3d/cli/cli_ocean3d.py"
+    script_path: "../src/aqua_diagnostics/ocean3d/cli_ocean3d.py"
     nworkers: 8
-    config: "${AQUA_CONFIG}/diagnostics/ocean3d/cli/config.drift.yaml"
+    config: "${AQUA_CONFIG}/diagnostics/ocean3d/config.drift.yaml"
   ocean3d_circulation:
-    script_path: "ocean3d/cli/cli_ocean3d.py"
+    script_path: "../src/aqua_diagnostics/ocean3d/cli_ocean3d.py"
     nworkers: 4
-    config: "${AQUA_CONFIG}/diagnostics/ocean3d/cli/config.circulation.yaml"
+    config: "${AQUA_CONFIG}/diagnostics/ocean3d/config.circulation.yaml"
   seaice_volume:
     script_path: "seaice/cli/cli_seaice.py"
     nworkers: 4
