update for control run generation

--- a/templates/lra/lra_italy_prec.yaml
+++ b/templates/lra/lra_italy_prec.yaml
@@ -21,7 +21,11 @@ options:
 
 data:
   IFS-FESOM:
-    story-2017-historical:
+    story-2017-control:
       hourly-hpz9-atm2d:
         vars: ['tprate']
-        workers: 1  #this defines the workers for this source
+        workers: 1 
+    # story-2017-historical:
+    #   hourly-hpz9-atm2d:
+    #     vars: ['tprate']
+    #     workers: 1
