t2k added to lra template

--- a/templates/lra/lra_italy_prec.yaml
+++ b/templates/lra/lra_italy_prec.yaml
@@ -21,11 +21,15 @@ options:
 
 data:
   IFS-FESOM:
-    story-2017-control:
-      hourly-hpz9-atm2d:
-        vars: ['tprate']
-        workers: 1 
+    # story-2017-control:
+    #   hourly-hpz9-atm2d:
+    #     vars: ['tprate']
+    #     workers: 1 
     # story-2017-historical:
     #   hourly-hpz9-atm2d:
     #     vars: ['tprate']
     #     workers: 1
+    story-2017-T2K:
+      hourly-hpz9-atm2d:
+        vars: ['tprate']
+        workers: 1
