--- a/templates/lra/lra_italy_prec-t2k.yaml
+++ b/templates/lra/lra_italy_prec-t2k.yaml
@@ -23,5 +23,5 @@ data:
   IFS-FESOM:
     story-2017-T2K:
       hourly-hpz9-atm2d:
-        vars: ['tprate', 'tcwv', '2t']
+        vars: ['2t'] # 'tprate', 'tcwv'
         workers: 4
