--- a/templates/lra/lra_europe_prec-lowres.yaml
+++ b/templates/lra/lra_europe_prec-lowres.yaml
@@ -21,15 +21,15 @@ options:
 
 data:
   IFS-FESOM:
-    story-2017-T2K:
+    story-2017-historical:
       hourly-hpz9-atm2d:
         vars: ['skt', 'msl']
         workers: 4
-    story-2017-historical:
-      daily-hpz9-atm2d:
+    story-2017-control:
+      hourly-hpz9-atm2d:
         vars: ['skt', 'msl']
         workers: 4
-    story-2017-control:
-      daily-hpz9-atm2d:
+    story-2017-T2K:
+      hourly-hpz9-atm2d:
         vars: ['skt', 'msl']
         workers: 4
