--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - eccodes==2.39.0
   # for eccodes see issues #252, #634, #870, #1282
   # PR #36 catalog repo
+  - cartopy_offlinedata # this is needed for MN5 HPC
   - pandas      
   - pandoc
   - pip
