--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ channels:
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.9,<3.13
-  - cdo>=2.4.4 #for healpix support
+  - cdo==2.4.4 #for healpix support
   - eccodes==2.39.0
   # for eccodes see issues #252, #634, #870, #1282
   # PR #36 catalog repo
