rationalized gitignore for tests

--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,8 @@ docs/sphinx/build/*
 
 # tests
 AQUA_tests/
-AQUA_tests.tar.gz
-AQUA_testsv2.tar.gz
-AQUA_testsv3.tar.gz
-AQUA_testsv4.tar.gz
-AQUA_tests_teleconnectionsv3.tar.gz
-AQUA_testsv5.tar.gz
-AQUA_tests_teleconnectionsv3.tar.gz
+AQUA_testsv*
+AQUA_tests_teleconnections*
 *.bak
 
 # coverage and vscode
