--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ channels:
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.10,<3.13
-  - cdo>=2.2.0,<2.5.0 #for healpix support, avoid 2.5.0 which is currently broken
+  - cdo>=2.2.0 #for healpix support
   - eccodes==2.40.0
   # for eccodes see issues #252, #634, #870, #1282
   # PR #36 catalog repo
