--- a/config/diagnostics/ecmean/config_ecmean_cli.yaml
+++ b/config/diagnostics/ecmean/config_ecmean_cli.yaml
@@ -1,20 +1,38 @@
-dataset:
-  catalog: null #optional, not necessary
-  model: ERA5
-  exp: era5-hpz3
-  source: monthly
-  atm_vars: ['2t', 'tprate', 'msl', 'ie', 'iews', 'inss', 'tcc', 'tsrwe',
-    'tnswrf', 'tnlwrf', 'snswrf', 'snlwrf', 'ishf', 'slhtf',
-    'u', 'v', 't', 'q']
-  oce_vars: ['tos', 'siconc', 'sos']
-  year1: null #if you want to select some specific years, otherwise use the entire dataset
-  year2: null
+datasets:
+  - catalog: null #optional, not necessary
+    model: ERA5
+    exp: era5-hpz3
+    source: monthly
+    regrid: r100
 
-compute:
-  numproc: 1
+output:
+  outputdir: './'
+  rebuild: true
+  save_pdf: true
+  save_png: true
+  dpi: 300
 
-setup:
-  interface_file: 'interface_AQUA_climatedt.yaml'
-  config_file: 'ecmean_config_climatedt.yaml'
-  outputdir: 'output'
+diagnostics:
+  ecmean: 
+    numproc: 1
+    interface_file: 'interface_AQUA_climatedt.yaml'
+    config_file: 'ecmean_config_climatedt.yaml'
+
+    global_mean:
+      run: true
+      atm_vars: ['2t', 'tprate', 'msl', 'ie', 'iews', 'inss', 'tcc', 'tsrwe',
+        'tnswrf', 'tnlwrf', 'snswrf', 'snlwrf', 'ishf', 'slhtf',
+        'u', 'v', 't', 'q']
+      oce_vars: ['tos', 'siconc', 'sos']
+      year1: null #if you want to select some specific years, otherwise use the entire dataset
+      year2: null
+
+    performance_indices:
+      run: true
+      atm_vars: ['2t', 'tprate', 'msl', 'ie', 'iews', 'inss', 'tcc', 'tsrwe',
+        'tnswrf', 'tnlwrf', 'snswrf', 'snlwrf', 'ishf', 'slhtf',
+        'u', 'v', 't', 'q']
+      oce_vars: ['tos', 'siconc', 'sos']
+      year1: null #if you want to select some specific years, otherwise use the entire 
+      year2: null
   
