initial integration of output saver

--- a/config/diagnostics/ecmean/config_ecmean_cli.yaml
+++ b/config/diagnostics/ecmean/config_ecmean_cli.yaml
@@ -1,5 +1,5 @@
 datasets:
-  - catalog: null #optional, not necessary
+  - catalog: ci #necessary
     model: ERA5
     exp: era5-hpz3
     source: monthly
