Aggiorna la dipendenza 'cartopy' a versione 0.24.1 nel file pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
 ]
 dependencies = [
     "boto3",
-    "cartopy",
+    "cartopy==0.24.1",
     "cfgrib",
     "dask",
     "eccodes==2.41.0",
