loop over variables in config

--- a/config/diagnostics/ensemble/config_global_2D_ensemble.yaml
+++ b/config/diagnostics/ensemble/config_global_2D_ensemble.yaml
@@ -26,7 +26,7 @@ diagnostics:
   ensemble:
     run: true
     diagnostic_name: 'EnsembleLatLon'
-    variable: '2t'
+    variable: ['2t',]
     params:
       default:
     plot_params:
