editing acc. to review comments

--- a/config/diagnostics/ensemble/config_timeseries_ensemble.yaml
+++ b/config/diagnostics/ensemble/config_timeseries_ensemble.yaml
@@ -56,5 +56,5 @@ diagnostics:
         enddate_ref: "2005-01-01"
     plot_params:
       default:
-        title: "Multi-Model Ensemble Statistics"
+        title: 
         plot_ensemble_members: False
