--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -165,7 +165,6 @@ jobs:
           }
           EOF
       - name: Run tests
-        if: ${{ github.actor != 'dependabot[bot]' }}
         run: |
           # Produce the XML report
           cd AQUA
@@ -175,9 +174,10 @@ jobs:
         if: ${{ github.actor != 'dependabot[bot]' }}
         run: cat AQUA/coverage.xml
       - name: Upload coverage reports to Codecov
+        if: ${{ github.actor != 'dependabot[bot]' && !cancelled() }}
         uses: codecov/codecov-action@v5
         with:
-          network_filter: "AQUA/"
+          files: AQUA/coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Upload test results to Codecov
         if: ${{ github.actor != 'dependabot[bot]' && !cancelled() }}
