moved h5py to the conda environment, to avoid github ci/cd issues

--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - pandoc
   - pip
   - hdf5 #explicitly to avoid issues with pypi version
+  - h5py==3.12.1 # moved from the pyproject 
   - python-cdo # for teleconnections
   - tempest-extremes # for TCs
   - xesmf # for ECmean
