AddFile: with new Sea Ice Diagnostic Documentation and correct regions comment

--- a/config/diagnostics/seaice/definitions/regions.yaml
+++ b/config/diagnostics/seaice/definitions/regions.yaml
@@ -1,4 +1,4 @@
-# Spatial delimitations of sub-regions of the Arctic and Southern Oceans
+# Spatial delimitations of sub-regions of the Northern and Southern Hemispheres
 regions:
   arctic:
     longname: Arctic
