--- a/config/grids/fesom.yaml
+++ b/config/grids/fesom.yaml
@@ -167,3 +167,12 @@ grids:
     path: '{{ grids }}/FESOM/fesom_tco2559_interpolated_3d.nc'
     space_coord: ["lon", "lat"]
     vert_coord: depth
+  # 
+  # EERIE FESOM 
+  eerie-fesom-0.25deg-2d:
+    cdo_options: "--force"
+    path: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-2d.nc'
+  eerie-fesom-0.25deg-3d:
+    cdo_options: "--force"
+    path: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc'
+      #level: '{{ grids }}/avg_so_remapped_20141222.nc'
