update config files

--- a/config/diagnostics/ocean3d/config_ocean_drift.yaml
+++ b/config/diagnostics/ocean3d/config_ocean_drift.yaml
@@ -1,3 +1,7 @@
+# Template according to #1613
+# The first model in this block can be overridden
+# in the command line by using:
+# --model, --exp, --source, --outputdir, --catalog
 datasets:
   - catalog: null
     model: FESOM
