--- a/config/diagnostics/ocean3d/config_ocean_trends.yaml
+++ b/config/diagnostics/ocean3d/config_ocean_trends.yaml
@@ -1,9 +1,14 @@
+# Template according to #1613
+# The first model in this block can be overridden
+# in the command line by using:
+# --model, --exp, --source, --outputdir, --catalog
 datasets:
   - catalog: null
     model: FESOM
     exp: hpz3
     source: monthly-3d
     regrid: r100
+    # reader_kwargs: {}
 
 output:
   outputdir: "./"
@@ -16,6 +21,7 @@ output:
 diagnostics:
   ocean_trends:
     multilevel:
+      diagnostic_name: 'ocean3d'
       run: true
       var: ['thetao', 'so']
       region: 'io'
