--- a/cli/grid-from-data/config-eerie-fesom.yaml
+++ b/cli/grid-from-data/config-eerie-fesom.yaml
@@ -1,12 +1,14 @@
 # These are needed for the AQUA retrieve
 model: IFS-FESOM
 exp: eerie-fesom-historical-1950
-source: 3D_monthly_fesom_0.25deg
+source: 3D_monthly_fesom_native
 var: avg_so
 
 # These are extra info:
 # model name for saving the grid
 model_name: fesom
-3d: True # 2d or 3d
+
+#3d: True # 2d or 3d
 # target folder for the grid generated
-tgt: /work/ab0995/a270260/aqua_eerie_grid
+tmp: /work/ab0995/a270260/aqua_eerie_grid/tmp
+tgt: /work/bb1153/b382075/aqua/grids
