--- a/config/grids/fesom.yaml
+++ b/config/grids/fesom.yaml
@@ -168,17 +168,17 @@ grids:
     space_coord: ["lon", "lat"]
     vert_coord: depth
   # 
-  # EERIE FESOM 
-  eerie-fesom-0.25deg-2d:
-    #cdo_options: "--force"
-    path: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-2d.nc'
-    space_coord: ["lon", "lat"]
-  eerie-fesom-0.25deg-3d:
-    #cdo_options: "--force"
-    path:  #'/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc' #'/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d-depth.nc' # '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d-levels.nc' #'/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc' 
-        lev: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc'
-        #depth: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d-depth.nc'
-        #lev: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc'
-    space_coord: ["lon", "lat"]
-    #vert_coord: "lev" 
-    vert_coord: ['lev']
+  ## EERIE FESOM 
+  #eerie-fesom-0.25deg-2d:
+  #  #cdo_options: "--force"
+  #  path: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-2d.nc'
+  #  space_coord: ["lon", "lat"]
+  #eerie-fesom-0.25deg-3d:
+  #  #cdo_options: "--force"
+  #  path:  #'/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc' #'/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d-depth.nc' # '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d-levels.nc' #'/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc' 
+  #      lev: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc'
+  #      #depth: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d-depth.nc'
+  #      #lev: '/work/ab0995/a270260/aqua_eerie_grid/eerie-fesom-0.25deg-3d.nc'
+  #  space_coord: ["lon", "lat"]
+  #  #vert_coord: "lev" 
+  #  vert_coord: ['lev']
