--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -132,12 +132,14 @@ jobs:
           aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           EOF
-      - name: Clone DVC repo and pull data
+      - name: Clone DVC repo, pull data and move to the right folder
         run: |
           git clone git@github.com:DestinE-Climate-DT/aqua-dvc.git
           cd aqua-dvc
           git checkout main
           dvc pull -r data-tests
+          mkdir -p ../AQUA/AQUA_tests
+          mv data-tests/* ../AQUA/AQUA_tests
       - name: Set up FDB
         run: |
           export
