PALEORCA2 oecene grid

--- a/config/grids/EC-EARTH4.yaml
+++ b/config/grids/EC-EARTH4.yaml
@@ -45,3 +45,13 @@ grids:
     cellareas: '{{ grids }}/EC-EARTH4/cellarea_PALEORCA2_T-pd.nc'
     cellareas_var: areat
     regrid_method: 'bil'
+
+  PALEORCA2-ece-eo: # Eocene LSM
+    path:
+        2d: '{{ grids }}/EC-EARTH4/PALEORCA2_mesh_sfc_grid_T-eo.nc'
+        deptht: '{{ grids }}/EC-EARTH4/PALEORCA2_mesh_3d_grid_T_level-eo.nc'
+    space_coord: ["x_grid_T", "y_grid_T"]
+    vert_coord: ["deptht"]
+    cellareas: '{{ grids }}/EC-EARTH4/cellarea_PALEORCA2_T-eo.nc'
+    cellareas_var: areat
+    regrid_method: 'bil'
