--- a/cli/drop/auto_DROP_overnight.yaml
+++ b/cli/drop/auto_DROP_overnight.yaml
@@ -5,13 +5,13 @@ target:
   catalog: lumi-phase2
 
 paths:
-  #outdir: /pfs/lustrep3/projappl/project_465000454/data/AQUA/LRA
-  outdir: /pfs/lustrep3/appl/local/climatedt/data/AQUA/LRA/
+  #outdir: /pfs/lustrep3/projappl/project_465000454/data/AQUA/DROP
+  outdir: /pfs/lustrep3/appl/local/climatedt/data/AQUA/DROP/
   tmpdir: /pfs/lustrep3/projappl/project_465000454/padavini/tmp
 
 
 options:
-# Set to True if lra-r100-monthly-zarr should be created and checked
+# Set to True if r100-monthly-zarr should be created and checked
   zarr: False
   verify_zarr: False
   loglevel: INFO
