update cli and config file

--- a/config/diagnostics/global_biases/config_global_biases.yaml
+++ b/config/diagnostics/global_biases/config_global_biases.yaml
@@ -51,6 +51,7 @@ diagnostics:
       2t:
         vmin: -15
         vmax: 15
+        cmap: 'RdBu_r'
       msl:
         vmin: -1000
         vmax: 1000
